# dotfiles

./: .Xresources  .aliases  .bash_profile  .bashrc  .dunstrc  .gitconfig  .gitignore  .gitignore.global  .gitmodules  .nanorc  .npmrc  .shrc  .tigrc  .tmux.conf  .vimrc  .xinitrc  .xmobarrc  .zshrc  README.md
.atom/: config.cson  keymap.cson
.config/: .gitignore  compton.conf  tab.yml
.config/Code/: .gitignore
.config/Code/User/: keybindings.json  settings.json
.config/alacritty/: alacritty.toml  alacritty.yml
.config/fish/: .gitignore
.config/fish/conf.d/: azsigmond.fish
.config/gh/: config.yml
.config/gnome-session/sessions/: xmonad-gnome-nopanel.session
.config/hangups/: hangups.conf
.config/nixpkgs/: config.nix
.config/nvim/: .gitignore  config.vim  init.vim  mappings.vim  plugins.vim
.config/plasma-workspace/env/: ssh-agent-startup.sh
.config/powerline/: config.json
.config/powerline/colorschemes/: default.json
.config/powerline/themes/shell/: default.json
.config/powerline/themes/tmux/: default.json
.config/powerline/themes/vim/: default.json
.config/shrc.d/: 00-init  aliases  coursier  docker  git  project  ssh  tab.zsh
.config/sublime-text-3/: .gitignore
.config/systemd/user/: noisetorch.service  powerline.service
.config/taffybar/: taffybar.hs  zsedem-taffybar.cabal
.config/tmux/: .gitignore
.config/vscode/_shared_config/User/: keybindings.json  settings.json
.config/yi/: yi.hs
.fonts/: README.md
.ipython/: .gitignore
.ipython/profile_default/: .gitignore
.ipython/profile_default/startup/: 99powerline-set.py
.local/: .gitignore  chroot.nix
.local/share/git/: git-commit-template.txt
.prompt/: stack.yaml  zsedem-prompt.cabal
.prompt/src/: prompt.hs
.prompt/src/System/: Prompt.hs
.prompt/src/System/Prompt/: Color.hs
.screenlayout/: bsptvhdmi.sh  home.sh  laptoponly.sh  seres.sh  work.sh
.stack/: .gitignore  config.yaml
.stack/global-project/: stack.yaml
.xmonad/: .gitignore  closewindows.sh  stack.yaml  startup.sh  volume.sh  xmonad-zsedem.cabal  xmonad.hs  xmonad.sublime-project  xmonad_zsedem.hs
.xmonad/assets/conky/: info.conkyrc
.xmonad/assets/xbm/: arch20.xbm
.xmonad/lib/XMonad/Config/: ZsEdem.hs
.xmonad/lib/XMonad/Config/ZsEdem/: Core.hs  Keys.hs  LogHooks.hs  Menu.hs  Startup.hs  UrgencyHook.hs
abs/: .gitignore
abs/hlock/: PKGBUILD
abs/invoke/: PKGBUILD
abs/sind/: PKGBUILD
abs/termsaver/: PKGBUILD
projects/: .gitignore
scripts/: cabal  exec_fullscreen  getsublimehaskellstack.sh
