name:                zsedem-prompt
version:             0.1.0.0
synopsis:            Prompt generator program to run on every time in bash shell to create the prompt
homepage:            http://github.com/zsedem/home
author:              Zsigmond Ádám Olivér
maintainer:          zsedem@gmail.com
category:            Script
build-type:          Simple
cabal-version:       >=1.10

executable zsedem-prompt
  hs-source-dirs:      src
  main-is:             prompt.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       unix,
                       directory,
                       filepath,
                       MissingH,
                       containers
  default-language:    Haskell2010

