name:                xmonad-zsedem
version:             0.0.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/xmonad#readme
license:             BSD3
author:              Zsigmond Ádám Olivér
maintainer:          zsedem@gmail.com
copyright:           2015 Zsigmond Ádám Olivér
build-type:          Simple
cabal-version:       >=1.10

executable xmonad-build
  main-is:             xmonad.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xmonad
                     , xmonad-contrib
                     , containers
                     , X11
                     , directory
                     , mtl
                     , taffybar
                     , data-default
                     --, xmonad-extras
  hs-source-dirs:      ., lib
  default-language:    Haskell2010
