name:                zsedem-taffybar
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/zsedem/simple#readme
author:              Zsigmond Ádám Olivér
maintainer:          zsedem@gmail.com
copyright:           Copyright: (c) 2016 Zsigmond Ádám Olivér
category:            Library
build-type:          Simple

executable zsedem-taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  build-depends:       base
                     , xmonad-contrib
                     , taffybar
  default-language:    Haskell2010

